# rtl433_esphome

./: .gitignore  AGENTS.md  MEMORY.md  README.md  garage-rtl433.yaml  prek.toml  pyproject.toml  rtl433-esphome-heltec-lora-32-v2.yaml  secrets.yaml.example
.github/: actionlint.yml
.github/scripts/: cleanup_prek_update_branches.py  update_pyproject_version.py
.github/workflows/: build.yml  labeler.yml  merge_conflict_labeler.yml  release.yml  validation.yml
components/: __init__.py
components/rtl433_native/: __init__.py  ledc_compat.h  rtl433_native.cpp  rtl433_native.h  rtl433_state.cpp  rtl433_state.h  rtl433_timing.h
docs/superpowers/plans/: 2026-05-06-rtl433-esphome-hybrid.md
docs/superpowers/specs/: 2026-05-06-rtl433-esphome-hybrid-design.md
rtl433_esphome.egg-info/: PKG-INFO  SOURCES.txt
scripts/: build  esphome-preflight  lint  package-firmware  test
scripts/platformio/: rtl433_esp_prebuild.py
tests/: conftest.py  test_config_validation.py  test_cpp_state.py  test_firmware_yaml.py  test_github_workflows.py  test_prek_autoupdate_workflow.py  test_scripts.py
tests/cpp/: test_rtl433_state.cpp
