[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtl433-esphome"
version = "v0.1.1"
description = "ESPHome rtl_433 native gateway for temperature sensors"
requires-python = ">=3.12"
dependencies = []
license = "MIT"
authors = [
    { name = "Snuffy2" },
]

[dependency-groups]
dev = [
    "esphome>=2026.5.3,<2027.0.0",
    "mypy",
    "PyYAML",
    "pytest",
    "ruff",
    "prek",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "types-PyYAML",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
fix = true

[tool.coverage.run]
branch = true
source = ["components/rtl433_native"]
relative_files = true
parallel = false

[tool.pytest.ini_options]
addopts = """
  --quiet
  --timeout=20
  --durations=10
  -o console_output_style=progress
  --cov=components.rtl433_native
  --cov-report=term-missing
  --cov-report=html
"""
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.report]
show_missing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["tests", "components/rtl433_native", ".github/scripts"]
disable_error_code = [
    "untyped-decorator",
]

[[tool.mypy.overrides]]
module = [
    "esphome.*",
]
ignore_missing_imports = true
